<resources>
    <string name="app_name">FONDA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_favorites">Favoritos</string>
    <string name="nav_rest">Restaurantes</string>
    <string name="nav_all_rest">Todos los Restaurantes</string>
    <string name="nav_reserve">Reservaciones</string>
    <string name="nav_order">Ordenes</string>
    <string name="nav_config">Configuraciones</string>
    <string name="nav_profile">Perfiles</string>
    <string name="nav_logout">Cerrar Sesión</string>

    <string name="nav_detail_restaurant">Detalle</string>
    <string name="action_settings">Settings</string>

    <string name="general_values_name">Nombre</string>
    <string name="general_values_lastname">Apellido</string>
    <string name="general_values_email">Correo electronico</string>
    <string name="general_values_password">Contrasenia</string>
    <string name="general_values_date">Fecha</string>
    <string name="general_values_time">Hora</string>
    <string name="general_values_numbers">Numeros</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password2">Repita contraseña</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_format_email">Formato inválido.
        Asegúrese de seguir el formato usuario@dominio</string>
    <string name="error_format_password">La contraseña debe estar en formato alfanumérico</string>
    <string name="error_length_password">La contraseña debe contener entre
        6 y 12 caracteres</string>
    <string name="error_invalid_password">La contraseña debe ser alfanumérica y
        contener de 6 a 12 caracteres</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Search -->
    <string name="filter_morning_schedule">Matutino</string>
    <string name="filter_afternoon_schedule">Vespertino</string>
    <string name="filter_night_schedule">Nocturno</string>
    <string name="search_title">Búsqueda</string>
    <string name="empty_search">Su búsqueda no ha arrojado resultados</string>
    <string name="no_connection">Compruebe su conexión a internet e inténtelo de nuevo</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_expandable_list">ExpandableList Demo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_close_account">Cerrar</string>
    <string name="title_fragment_close">Cerrar Cuenta</string>
    <string name="title_activity_all_restaurant">Lista de Restaurantes</string>


    <!--STRINGS CONSTANT FOR FAVORITES-->
    <string name="favorite_conexion_fail_message">No se ha podido establecer la conexion.</string>
    <string name="favorite__fail_message">No se ha podido establecer la conexion.</string>
    <string name="favorite_remove_success_meessage">Se ha eliminado el restaurante de su lista de favoritos.</string>
    <string name="favorite_remove_fail_meessage">No se ha eliminado el restaurante de su lista de favoritos.</string>
    <string name="favorite_add_success_meessage">Se ha agregado el restaurante de su lista de favoritos.</string>
    <string name="favorite_add_fail_meessage">No se ha agregado el restaurante de su lista de favoritos.</string>
    <string name="cliente">Cliente:</string>

    <!--Strings related to Restaurant Detail View-->

    <string name="restaurant_hours">Horario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
