<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.RestaurantListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="esto es"
            android:id="@+id/vtext_001"
            android:layout_weight="0.32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="un LinearLayout"
            android:id="@+id/vtext_002"
            android:layout_weight="0.08" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Horizontal"
            android:id="@+id/vtext_003"
            android:layout_weight="0.08" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="(columnas)"
            android:id="@+id/vtext_004"
            android:layout_weight="0.91" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="esto es un Linear Layout Vertical"
            android:id="@+id/vtext_005"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(filas)"
            android:id="@+id/vtext_006"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.34">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="left">

            <EditText
                android:id="@+id/etext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/general_values_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="left">

            <AutoCompleteTextView
                android:id="@+id/etext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/general_values_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/general_values_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/general_values_date"
                android:id="@+id/etext_date"
                android:layout_gravity="center_horizontal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:hint="@string/general_values_time"
                android:id="@+id/etext_time"
                android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/general_values_numbers"
                android:id="@+id/etext_numbers"
                android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
