<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.RestauranstsActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/img_morning"
            android:src="@drawable/morning"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/filter_morning_schedule"
            android:id="@+id/textView21"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#90000000"/>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/img_afternoon"
            android:src="@drawable/afternoon"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/filter_afternoon_schedule"
            android:id="@+id/textView22"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#90000000"/>

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/img_night"
            android:src="@drawable/night"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/filter_night_schedule"
            android:id="@+id/textView23"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="#90000000"/>

    </FrameLayout>



</LinearLayout>

</RelativeLayout>